Native/Test/KL/destructor-type-nonexistent.out
destructor-type-nonexistent.kl:1:1: error: 'Foo': type not registered
