Native/Test/KL/destructor-type-nonexistent.kl
/*
 *  Copyright 2010-2012 Fabric Technologies Inc. All rights reserved.
 */

function ~Foo() {
}
